Project gestion_conges_gmes_v1 {
  database_type: 'MySQL'
  Note: '''
  Version simplifiée de la base de données pour la V1 de l'application GMES.
  Les règles techniques très avancées sont regroupées dans les tables principales
  afin de garder un modèle lisible et réaliste pour le démarrage du projet.
  '''
}

/* =========================
   ENUMERATIONS
   ========================= */

Enum user_role {
  COLLABORATEUR
  RESPONSABLE_SERVICE
  RH
  DIRECTEUR
  ADMIN
}

Enum employment_type {
  INTERNE
  EXTERNE
}

Enum presence_status {
  PRESENT
  EN_VACANCES
  ABSENT
}

Enum service_type {
  INTERNE
  EXTERNE
}

Enum validation_mode {
  RESPONSABLE_PUIS_RELAIS
  DIRECTEUR_ET_RH
  DIRECTEUR_SEUL
  SANS_VALIDATION
}

Enum leave_type_category {
  DEMANDE_CONGE
  DECLARATION_ABSENCE
}

Enum day_period {
  MATIN
  APRES_MIDI
}

Enum leave_request_status {
  BROUILLON
  EN_ATTENTE_VALIDATION
  VALIDEE
  REFUSEE
  ANNULEE
  ANNULATION_EN_ATTENTE_ACCORD
  ANNULEE_APRES_VALIDATION
  EXPIREE_NON_VALIDEE
}

Enum absence_status {
  BROUILLON
  DECLAREE
  JUSTIFICATIF_EN_ATTENTE
  A_VERIFIER_PAR_RH
  JUSTIFICATIF_REJETE
  ENREGISTREE
  ANNULEE
}

Enum derogation_status {
  EN_ATTENTE_RH
  ACCORDEE
  REFUSEE
  UTILISEE
  EXPIREE
}

Enum document_kind {
  JUSTIFICATIF
  PDF_VALIDATION
  PDF_ANNULATION
}

Enum document_status {
  EN_ATTENTE
  ACCEPTE
  REJETE
  ARCHIVE
  SUPPRIME
}

Enum balance_movement_type {
  ACQUISITION
  RESERVATION
  LIBERATION_RESERVATION
  DEDUCTION
  CORRECTION_POSITIVE
  CORRECTION_NEGATIVE
  RECREDIT
  REMISE_A_ZERO
}

Enum holiday_type {
  NATIONAL
  MARTINIQUE
  FERMETURE_GMES
}

Enum notification_channel {
  APPLICATION
  EMAIL
  LES_DEUX
}

/* =========================
   1. UTILISATEURS
   ========================= */

Table users {
  id bigint [pk, increment]
  nom varchar(100) [not null]
  prenom varchar(100) [not null]
  email varchar(190) [not null, unique]
  password_hash varchar(255)
  microsoft_id varchar(255) [unique]

  role user_role [not null]
  employment_type employment_type [not null, default: 'INTERNE']
  service_id bigint
  hire_date date

  presence_status presence_status [not null, default: 'PRESENT']
  is_active boolean [not null, default: true]

  signature_type varchar(30)
  signature_data longtext
  signature_updated_at datetime

  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  Note: '''
  Contient les Employés/Collaborateurs, Responsables, RH, Directeur et Admin.
  La signature enregistrée dans le profil est réutilisable, mais une copie figée
  est conservée dans chaque demande validée.
  '''
}

/* =========================
   2. SERVICES
   ========================= */

Table services {
  id bigint [pk, increment]
  name varchar(180) [not null]
  service_type service_type [not null]
  external_company_name varchar(180)

  primary_manager_id bigint
  validation_mode validation_mode [not null]
  takeover_delay_days int [not null, default: 7]

  minimum_presence int
  has_minimum_presence_rule boolean [not null, default: false]

  is_active boolean [not null, default: true]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (name, external_company_name) [unique]
  }

  Note: '''
  Équipe technique :
  - validation_mode = RESPONSABLE_PUIS_RELAIS
  - minimum_presence = 3

  Pôle Applicatif :
  - minimum_presence = 1

  Autres services internes et services externes :
  - validation_mode = DIRECTEUR_ET_RH
  '''
}

/* =========================
   3. TYPES DE CONGES / ABSENCES
   ========================= */

Table leave_types {
  id bigint [pk, increment]
  name varchar(160) [not null, unique]
  category leave_type_category [not null]

  deducts_paid_leave_balance boolean [not null, default: false]
  document_required boolean [not null, default: false]
  document_can_be_added_later boolean [not null, default: true]

  employee_can_create boolean [not null, default: true]
  rh_only boolean [not null, default: false]

  allows_days boolean [not null, default: true]
  allows_half_days boolean [not null, default: true]
  allows_hours boolean [not null, default: false]

  requires_validation boolean [not null, default: true]
  is_active boolean [not null, default: true]

  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  Note: '''
  Exemples :
  - Congés payés : DEMANDE_CONGE et déduit le solde.
  - Congé sans solde : DEMANDE_CONGE sans déduction.
  - Maternité, paternité, maladie, enfant malade, événement familial :
    DECLARATION_ABSENCE avec justificatif obligatoire.
  '''
}

/* =========================
   4. DEMANDES DE CONGES
   ========================= */

Table leave_requests {
  id bigint [pk, increment]

  employee_id bigint [not null]
  created_by_id bigint [not null]
  leave_type_id bigint [not null]
  service_id bigint [not null]

  start_date date [not null]
  end_date date [not null]
  start_period day_period [not null, default: 'MATIN']
  end_period day_period [not null, default: 'APRES_MIDI']

  calendar_duration int [not null]
  deducted_days decimal(7,2) [not null]

  status leave_request_status [not null, default: 'BROUILLON']
  comment text
  submitted_at datetime
  modification_deadline date

  real_balance_before decimal(7,2)
  potential_balance_before decimal(7,2)
  real_balance_after decimal(7,2)

  final_decider_id bigint
  final_decider_role user_role
  decision_at datetime
  refusal_comment text

  employee_signature_type varchar(30)
  employee_signature_data longtext
  employee_signed_at datetime

  validator_signature_type varchar(30)
  validator_signature_data longtext
  validator_signed_at datetime

  rh_confirmed_director_agreement boolean [not null, default: false]
  rh_director_agreement_confirmed_at datetime

  is_urgent boolean [not null, default: false]
  urgent_reason text

  version int [not null, default: 1]
  locked_at datetime

  cancellation_requested_by_id bigint
  cancellation_reason text
  employee_cancellation_consent boolean
  employee_cancellation_response_at datetime
  cancelled_at datetime

  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (employee_id, start_date, end_date)
    (service_id, status)
    (status, submitted_at)
  }

  Note: '''
  Statuts uniquement pour les congés payés et sans solde.
  JUSTIFICATIF_EN_ATTENTE n'est pas utilisé ici.
  Le premier décideur autorisé verrouille la demande pour les autres.
  Les informations d'annulation sont conservées directement dans cette table
  afin d'éviter une table supplémentaire en V1.
  '''
}

/* =========================
   5. DECLARATIONS D'ABSENCE
   ========================= */

Table absence_declarations {
  id bigint [pk, increment]

  employee_id bigint [not null]
  created_by_id bigint [not null]
  leave_type_id bigint [not null]
  service_id bigint [not null]

  start_date date [not null]
  end_date date [not null]
  start_period day_period
  end_period day_period

  duration_days decimal(7,2)
  duration_hours decimal(7,2)

  status absence_status [not null, default: 'BROUILLON']
  comment text
  declared_at datetime

  verified_by_rh_id bigint
  verified_at datetime

  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (employee_id, start_date, end_date)
    (status, declared_at)
  }

  Note: '''
  Concerne notamment maternité, paternité, arrêt maladie,
  enfant malade, événement familial et absence autorisée.
  '''
}

/* =========================
   6. DOCUMENTS
   ========================= */

Table documents {
  id bigint [pk, increment]

  leave_request_id bigint
  absence_declaration_id bigint

  document_kind document_kind [not null]
  original_name varchar(255)
  storage_key varchar(500) [not null, unique]
  mime_type varchar(100)
  file_size bigint

  status document_status [not null, default: 'EN_ATTENTE']

  uploaded_by_id bigint [not null]
  verified_by_rh_id bigint

  rejection_reason text
  retention_until date

  uploaded_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  verified_at datetime
  deleted_at datetime

  indexes {
    leave_request_id
    absence_declaration_id
    (document_kind, status)
  }

  Note: '''
  Regroupe :
  - les justificatifs ;
  - les PDF de validation ;
  - les PDF d'annulation.

  Seule la RH peut consulter le contenu des justificatifs.
  Les PDF métier restent accessibles aux utilisateurs autorisés.
  '''
}

/* =========================
   7. DEROGATIONS
   ========================= */

Table derogations {
  id bigint [pk, increment]

  employee_id bigint [not null]
  leave_type_id bigint [not null]
  leave_request_id bigint [unique]

  requested_start_date date [not null]
  requested_end_date date [not null]
  reason text [not null]

  status derogation_status [not null, default: 'EN_ATTENTE_RH']

  requested_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  decided_by_rh_id bigint
  decision_comment text
  decided_at datetime

  expires_at datetime
  used_at datetime

  indexes {
    (employee_id, status)
    (status, requested_at)
  }

  Note: '''
  Une dérogation concerne une seule demande.
  Elle autorise éventuellement le dépôt entre J-29 et J-3.
  '''
}

/* =========================
   8. SOLDES
   ========================= */

Table leave_balances {
  id bigint [pk, increment]

  employee_id bigint [not null]
  reference_period varchar(20) [not null]
  counter_type varchar(20) [not null]

  acquired_days decimal(7,2) [not null, default: 0]
  reserved_days decimal(7,2) [not null, default: 0]
  consumed_days decimal(7,2) [not null, default: 0]
  available_days decimal(7,2) [not null, default: 0]

  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (employee_id, reference_period, counter_type) [unique]
  }

  Note: '''
  counter_type peut représenter N-1, N ou N+1.
  Le solde potentiel correspond à available_days - reserved_days.
  '''
}

/* =========================
   9. MOUVEMENTS DE SOLDE
   ========================= */

Table balance_movements {
  id bigint [pk, increment]

  employee_id bigint [not null]
  leave_balance_id bigint [not null]
  leave_request_id bigint
  actor_id bigint

  movement_type balance_movement_type [not null]
  days decimal(7,2) [not null]

  balance_before decimal(7,2) [not null]
  balance_after decimal(7,2) [not null]

  reason text
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (employee_id, created_at)
    leave_request_id
  }

  Note: '''
  Conserve les acquisitions mensuelles de 2,5 jours,
  les réservations, déductions, corrections et recrédits.
  '''
}

/* =========================
   10. JOURS FERIES / FERMETURES
   ========================= */

Table holidays {
  id bigint [pk, increment]

  date date [not null]
  name varchar(180) [not null]
  holiday_type holiday_type [not null]

  deductible boolean [not null, default: false]
  source varchar(80)
  created_by_id bigint

  is_active boolean [not null, default: true]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (date, holiday_type) [unique]
  }

  Note: '''
  Regroupe les jours fériés nationaux, ceux de la Martinique
  et les fermetures décidées par GMES.
  '''
}

/* =========================
   11. PARAMETRES
   ========================= */

Table settings {
  id bigint [pk, increment]
  setting_key varchar(150) [not null, unique]
  setting_value text [not null]
  description text
  updated_by_id bigint
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  Note: '''
  Exemples de paramètres :
  - NORMAL_REQUEST_DEADLINE_DAYS = 30
  - SPECIAL_REQUEST_DEADLINE_DAYS = 60
  - SPECIAL_DURATION_THRESHOLD_DAYS = 21
  - MODIFICATION_DEADLINE_DAYS = 7
  - DEROGATION_LAST_ALLOWED_DAY = 3
  - SUMMER_PERIOD_START = 05-01
  - SUMMER_PERIOD_END = 10-31
  - MONTHLY_ACCRUAL_RATE = 2.5
  - REFERENCE_PERIOD_START = 06-01
  '''
}

/* =========================
   12. NOTIFICATIONS
   ========================= */

Table notifications {
  id bigint [pk, increment]

  user_id bigint [not null]
  channel notification_channel [not null, default: 'LES_DEUX']

  type varchar(100) [not null]
  title varchar(255) [not null]
  message text [not null]

  leave_request_id bigint
  absence_declaration_id bigint
  derogation_id bigint

  read_at datetime
  email_sent_at datetime
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id, read_at)
    (type, created_at)
  }
}

/* =========================
   13. HISTORIQUE / AUDIT
   ========================= */

Table audit_logs {
  id bigint [pk, increment]

  actor_id bigint
  action varchar(120) [not null]
  resource_type varchar(100) [not null]
  resource_id bigint

  old_value json
  new_value json
  ip_address varchar(64)

  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (resource_type, resource_id, created_at)
    (actor_id, created_at)
  }

  Note: '''
  Sert d'historique général pour les demandes, déclarations,
  justificatifs, corrections de solde et paramètres.
  '''
}

/* =========================
   RELATIONS
   ========================= */

Ref: services.id < users.service_id
Ref: users.id < services.primary_manager_id

Ref: users.id < leave_requests.employee_id
Ref: users.id < leave_requests.created_by_id
Ref: users.id < leave_requests.final_decider_id
Ref: users.id < leave_requests.cancellation_requested_by_id
Ref: leave_types.id < leave_requests.leave_type_id
Ref: services.id < leave_requests.service_id

Ref: users.id < absence_declarations.employee_id
Ref: users.id < absence_declarations.created_by_id
Ref: users.id < absence_declarations.verified_by_rh_id
Ref: leave_types.id < absence_declarations.leave_type_id
Ref: services.id < absence_declarations.service_id

Ref: leave_requests.id < documents.leave_request_id
Ref: absence_declarations.id < documents.absence_declaration_id
Ref: users.id < documents.uploaded_by_id
Ref: users.id < documents.verified_by_rh_id

Ref: users.id < derogations.employee_id
Ref: users.id < derogations.decided_by_rh_id
Ref: leave_types.id < derogations.leave_type_id
Ref: leave_requests.id < derogations.leave_request_id

Ref: users.id < leave_balances.employee_id

Ref: users.id < balance_movements.employee_id
Ref: users.id < balance_movements.actor_id
Ref: leave_balances.id < balance_movements.leave_balance_id
Ref: leave_requests.id < balance_movements.leave_request_id

Ref: users.id < holidays.created_by_id
Ref: users.id < settings.updated_by_id

Ref: users.id < notifications.user_id
Ref: leave_requests.id < notifications.leave_request_id
Ref: absence_declarations.id < notifications.absence_declaration_id
Ref: derogations.id < notifications.derogation_id

Ref: users.id < audit_logs.actor_id
